@@ -1,5 +1,9 @@
 [b]Version 0.6.0rc2 (not released yet)[/b]:
 
+(2008-02-09)
+ * (Windows) Screensaver: set the timeout for lowpower, poweroff and 
+   screensaver before playing, and restore on stop.
+ 
 (2008-02-08)
  * (Windows) Bugfix: don't try to convert to 8.3 short names files that
    don't exist.
